<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VolleryDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">Volley可是说是把AsyncHttpClient和Universal-Image-Loader的优点集于了一身，既可以像AsyncHttpClient一样非常简单地进行HTTP通信，也可以像Universal-Image-Loader一样轻松加载网络上的图片。除了简单易用之外，Volley在性能方面也进行了大幅度的调整，它的设计目标就是非常适合去进行数据量不大，但通信频繁的网络操作，而对于大数据量的网络操作，比如说下载文件等，Volley的表现就会非常糟糕。</string>
    <string name="base_post">StringRequest的使用</string>
    <string name="base_json">JsonRequest的使用</string>
    <string name="base_image">ImageRequest的使用</string>
    <string name="json">json</string>
    <string name="json_array">json_array</string>
    <string name="get">转到(GET)</string>
    <string name="post">转到(POST)</string>
    <string name="show_url">请输入请求地址</string>
    <string name="show_url_search">请输入在百度搜索的关键字</string>
    <string name="request_image">ImageRequest的使用</string>
    <string name="image_loader">ImageLoader的使用</string>
    <string name="network_image">NetworkImageView的使用</string>
    <string name="huoqu">获取</string>
    <string name="xml">自定义xmlRequest</string>
    <string name="gson">自定义GsonRequest使用</string>
    <string name="gson_mybean">MyGsonBeanRequest的使用</string>
    <string name="mygsonlistbeanrequest_">MyGsonListBeanRequest的使用</string>

</resources>