<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/base_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/base_post"
                android:textSize="16sp" />

            <Button
                android:id="@+id/base_json"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/base_json"
                android:textSize="16sp" />

            <Button
                android:id="@+id/base_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/base_image"
                android:textSize="16sp" />

            <Button
                android:id="@+id/base_xml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/xml"
                android:textSize="16sp" />

            <Button
                android:id="@+id/base_gson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gson"
                android:textSize="16sp" />

            <Button
                android:id="@+id/base_gson_mybean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gson_mybean"
                android:textSize="16sp" />

            <Button
                android:id="@+id/base_gson_mylistbean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mygsonlistbeanrequest_"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>